[gd_scene load_steps=13 format=3 uid="uid://b7cp1xgv63ikt"]

[ext_resource type="Script" uid="uid://cnlp2qgri2cfd" path="res://scripts/main_control.gd" id="1_28flt"]
[ext_resource type="Shader" uid="uid://c4jrgct8f544w" path="res://shader scripts/Main.gdshader" id="2_1ehe0"]
[ext_resource type="AudioStream" uid="uid://v1w80vcpnmv5" path="res://audio/Clicksound.mp3" id="3_1ehe0"]
[ext_resource type="PackedScene" uid="uid://dofoaiffkao7b" path="res://Scenes/planet_stable.tscn" id="4_n45e2"]
[ext_resource type="PackedScene" uid="uid://uhsrlmdmgi1f" path="res://Scenes/planet.tscn" id="5_opfnp"]
[ext_resource type="FontFile" uid="uid://pgrxfminbce7" path="res://fonts/Michroma-Regular.ttf" id="6_opfnp"]
[ext_resource type="Texture2D" uid="uid://dp1pcswfiqnm8" path="res://images/Screenshot 2025-06-25 235001.png" id="7_cp0ys"]
[ext_resource type="Texture2D" uid="uid://kmdgjyg7tm4w" path="res://images/itchpng.png" id="8_yhxw7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ce3w2"]
shader = ExtResource("2_1ehe0")

[sub_resource type="LabelSettings" id="LabelSettings_1ehe0"]
line_spacing = 2.0
font = ExtResource("6_opfnp")
font_size = 528

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhxw7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trj04"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(1, 1, 1, 1)

[node name="main_menu" type="CanvasLayer"]

[node name="Black" type="ColorRect" parent="."]
offset_right = 1166.0
offset_bottom = 660.0
color = Color(0, 0, 0, 1)

[node name="Clicksound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1ehe0")

[node name="Planetwhite Stable" parent="." instance=ExtResource("4_n45e2")]
position = Vector2(344, 266)

[node name="Planetwhite" parent="." instance=ExtResource("5_opfnp")]
position = Vector2(351, 534)
scale = Vector2(0.383852, 0.383852)
linear_velocity = Vector2(200, 0)
linear_damp = 0.0

[node name="Planetwhite2" parent="." instance=ExtResource("5_opfnp")]
position = Vector2(351, 626)
scale = Vector2(2.46307, 2.46307)
mass = 100.0
linear_velocity = Vector2(1000, 0)
linear_damp = 0.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_28flt")

[node name="starry" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_ce3w2")
layout_mode = 0
offset_right = 1169.0
offset_bottom = 663.0

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 0
offset_left = 480.0
offset_top = 400.0
offset_right = 713.0
offset_bottom = 570.0
scale = Vector2(0.836642, 0.836642)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="SandboxButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_opfnp")
theme_override_font_sizes/font_size = 32
text = "Sandbox"

[node name="ChallengesButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_opfnp")
theme_override_font_sizes/font_size = 32
text = "Challenges"

[node name="ExitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_opfnp")
theme_override_font_sizes/font_size = 32
text = "Exit game"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 128.0
offset_top = 123.0
offset_right = 3137.0
offset_bottom = 875.0
scale = Vector2(0.304892, 0.304892)
text = "S  larBox"
label_settings = SubResource("LabelSettings_1ehe0")
horizontal_alignment = 1

[node name="Github" type="Button" parent="Control"]
layout_mode = 0
offset_left = 893.0
offset_top = 571.0
offset_right = 1121.0
offset_bottom = 617.0
theme_override_fonts/font = ExtResource("6_opfnp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_yhxw7")
text = "Github"
icon = ExtResource("7_cp0ys")

[node name="Itch" type="Button" parent="Control"]
layout_mode = 0
offset_left = 888.0
offset_top = 506.0
offset_right = 1116.0
offset_bottom = 552.0
theme_override_colors/icon_focus_color = Color(0.967671, 0.967671, 0.967671, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_opfnp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_trj04")
text = "itch"
icon = ExtResource("8_yhxw7")

[connection signal="pressed" from="Control/Github" to="Control" method="_on_github_pressed"]
[connection signal="pressed" from="Control/Itch" to="Control" method="_on_itch_pressed"]
